# book_sorting_system

./: .gitmodules  README.md
bss_arm/Universal_Robots_ROS2_Driver-foxy/ur_bringup/launch/: ur10.launch.py  ur_moveit.launch.py
bss_arm/ros2_RobotSimulation/UniversalRobots/UR10/ur10_ros2_gazebo/: package.xml
bss_arm/ros2_RobotSimulation/UniversalRobots/UR10/ur10_ros2_gazebo/config/: visual_parameters.yaml
bss_arm/ros2_RobotSimulation/UniversalRobots/UR10/ur10_ros2_gazebo/launch/: ur10_simulation.launch.py
bss_arm/ros2_RobotSimulation/UniversalRobots/UR10/ur10_ros2_gazebo/meshes/collision/: base_link.stl
bss_arm/ros2_RobotSimulation/UniversalRobots/UR10/ur10_ros2_gazebo/src/: diff_drive_scout_controller.cpp
bss_arm/ros2_RobotSimulation/UniversalRobots/UR10/ur10_ros2_moveit2/: CMakeLists.txt  package.xml
bss_arm/ros2_RobotSimulation/UniversalRobots/UR10/ur10_ros2_moveit2/launch/: launch.py  scout_cartographer.launch.py  ur10_interface.launch.py
bss_arm/ros2_RobotSimulation/UniversalRobots/UR10/ur10_ros2_moveit2/models/Bookstack/: model.config
bss_arm/ros2_RobotSimulation/UniversalRobots/UR10/ur10_ros2_moveit2/models/STL/: bookver3.STL  bookver5.STL  slide2.STL
bss_arm/ros2_RobotSimulation/UniversalRobots/UR10/ur10_ros2_moveit2/rviz/: scout_cartographer.rviz
bss_arm/ros2_RobotSimulation/UniversalRobots/UR10/ur10_ros2_moveit2/worlds/: bookstack.world  nobook.world
bss_arm_interface/: CMakeLists.txt  package.xml
bss_arm_interface/include/bss_arm_interface/: bss_arm.hpp
bss_arm_interface/src/: bss_arm.cpp  bss_arm_fake_move_arm.cpp
bss_bringup/: CMakeLists.txt  package.xml
bss_bringup/bss_bringup/: arm_action_client.py
bss_bringup/launch/: mobile_shelf_gazebo.launch.py
bss_controller/bss_controller_bringup/: package.xml  setup.cfg  setup.py
bss_controller/bss_controller_bringup/bss_bringup/: arm_action_server.py
bss_controller/bss_controller_bringup/bss_controller_bringup/: arm_action_client.py  arm_action_node.py  arm_action_server.py  arm_service_client.py  bss_commander (another copy).py  bss_commander copy 2.py  bss_commander copy.py  bss_commander.py  ur10_action_client.py
bss_controller/bss_controller_bringup/bss_controller_bringup/submodules/: robot_navigator.py
bss_controller/bss_controller_interface/: CMakeLists.txt  package.xml
bss_controller/bss_controller_interface/action/: MoveArm.action
bss_controller/bss_controller_interface/srv/: BSSControl.srv
bss_description/: CMakeLists.txt  package.xml
bss_gazebo/: CMakeLists.txt  README.md  package.xml
bss_gazebo/config/: turtlebot3_lds_2d.lua
bss_gazebo/launch/: book_spawner.launch.py  launch.py
bss_gazebo/models/Bookstack/: model.sdf
bss_gazebo/models/STL/: Slide.STL  book.STL
bss_gazebo/models/book/: model.config  model.sdf
bss_gazebo/models/bookver5/: model.config  model.sdf
bss_gazebo/models/counter/: model.config  model.sdf
bss_gazebo/models/slide/: model.config  model.sdf
bss_gazebo/models/slide50/: model.config  model.sdf
bss_gazebo/models/slidever2/: model.config  model.sdf
bss_gazebo/urdf/: ur10_macro.urdf.xacro
bss_gazebo/worlds/: bookstack.world  empty  nobook.world  nobookver2.world  skeleton.world
bss_hardware/: CMakeLists.txt  package.xml
bss_interface/: CMakeLists.txt  package.xml
bss_interface/srv/: MoveArm.srv
bss_shelf/: README.md  enable_CAN.sh
bss_shelf/bss_shelf_bringup/: CMakeLists.txt  package.xml
bss_shelf/bss_shelf_bringup/config/: scout_v2_control.yaml  scout_v2_diff_drive_control.yaml  scout_v2_joint_trajectory_control.yaml
bss_shelf/bss_shelf_bringup/launch/: book_spawner.launch.py  mobile_shelf_cartographer.launch.py  mobile_shelf_gazebo.launch.py  mobile_shelf_spawner.launch.py  scout_base_launch.py
bss_shelf/bss_shelf_bringup/log/: latest_list
bss_shelf/bss_shelf_bringup/meshes/scout_v2/: base_link.stl  l1_shelf_back_1.stl  l1_shelf_front_1.stl
bss_shelf/bss_shelf_bringup/models/bookver5/: model.sdf
bss_shelf/bss_shelf_bringup/rviz/: base_navigation.rviz  cartographer.rviz  navigation.rviz  scout_v2.rviz
bss_shelf/bss_shelf_bringup/src/: scout_virtual_node.cpp
bss_shelf/bss_shelf_bringup/urdf/scout_mini/: scout_mini.urdf  scout_mini.xacro  scout_mini_wheel.xacro
bss_shelf/bss_shelf_bringup/urdf/scout_v2/: scout_v2.urdf  scout_v2.xacro  scout_v2_fixedwheel_w_shelf.xacro  scout_v2_nav.xacro  scout_v3.xacro  scout_wheel_type1.xacro  scout_wheel_type2.xacro
bss_shelf/bss_shelf_world/: empty_world.world
bss_shelf/scout_demo_node/: CMakeLists.txt  package.xml
bss_shelf/scout_demo_node/launch/: scout_base_bringup_launch.py  scout_base_cartographer.launch.py  scout_base_launch.py  scout_base_navigation.launch.py  scout_cartographer.launch.py  scout_gazebo_cartographer.launch.py  scout_gazebo_navigation.launch.py  scout_lidar_launch.py  scout_navigation.launch.py
bss_shelf/scout_demo_node/map/: map.pgm  map.yaml
bss_shelf/scout_demo_node/msg/: SystemState.msg
bss_shelf/scout_demo_node/param/: ekf.yaml  nav2_params.yaml  slam_online_async.yaml  ydlidar.yaml
bss_shelf/scout_demo_node/src/: scout_base.cpp  ydlidar_driver.cpp
bss_shelf/ydlidar_ros2_driver/launch/: ydlidar_launch.py
bss_shelf/ydlidar_ros2_driver/params/: ydlidar.yaml
bss_user_interface/: README.md  bss_user_interface_psg.py
log/: latest_list
mobile_shelf/: CMakeLists.txt  package.xml
mobile_shelf/launch/: mobile_shelf_gazebo.launch.py
mobile_shelf/mobile_shelf/launch/: mobile_shelf.launch.py  mobile_shelf_gazebo.launch.py
mobile_shelf/mobile_shelf/rviz/: scout_v2.rviz
mobile_shelf/mobile_shelf_bringup/: CMakeLists.txt  package.xml
mobile_shelf/mobile_shelf_bringup/launch/: mobile_shelf_gazebo.launch.py
mobile_shelf/worlds/: empty.world
robo_arm/bss_arm_interface/: CMakeLists.txt  package.xml
(+3 files in other folders)
